devops/istio/istio/3-service-to-service-comunication/requisite.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: test
  labels:
    istio-injection: enabled
spec: {}
status: {}
