devops/istio/istio/3-service-to-service-comunication/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test-api-v1
    version: v1
  name: test-api-v1
  namespace: test
spec:
  replicas: 1
  # IMPORTANT ===================
  selector:
    matchLabels:
      app: test-api-v1
      version: v1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      # IMPORTANT ===================
      labels:
        app: test-api-v1
        version: v1
    spec:
      containers:
      - image: wnyao/test-api:v1
        name: test-api-v1
        resources: {}
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test-api-v2
  name: test-api-v2
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-api-v2
      version: v2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-api-v2
        version: v2
    spec:
      containers:
      - image: wnyao/test-api:v2
        name: test-api-v2
        resources: {}
status: {}
